# mlp-demo

./: .gitignore
demo/argo-counter/: Dockerfile  argo-counter-wf.yaml  argo-rbac.yaml  main.py  workflow-controller.yaml
demo/fastapi-demo/: Dockerfile  fastapi-demo.yaml  fastapi-rollouts-demo.yaml  main.py
demo/gpu-demo/: Dockerfile  Dockerfile.lock-generator  README.md  flow.py  pyproject.toml  requirements.txt
demo/gpu-demo/.metaflowconfig/: config_argo.json  gpuinferenceflow
demo/gpu-demo/docs/: POETRY_SETUP.md  guide.md  infrastructure_summary.txt
demo/hf-tgi-demo/: tgi-pv.yaml  tgi-pvc.yaml  tgi-rollout.yaml  tgi-service.yaml
demo/llamacpp-demo/: llamacpp-pv.yaml  llamacpp-pvc.yaml  llamacpp-rollout.yaml  llamacpp-service.yaml
demo/metaflow-demo/: Dockerfile  artifacts.ipynb  config.yaml  flow.py  latencies.json  requirements.txt
demo/metaflow-demo/.metaflowconfig/: config_argo.json  config_local.json
demo/minikube/: remote-minikube.yaml
demo/nginx-demo/: nginx-demo.yaml
demo/ollama-demo/: 02-pv.yaml  03-pvc.yaml  04-deployment.yaml  05-service.yaml  ollama-rollout.yaml  ollama-service.yaml
docs/: infrastructure_summary.txt
docs/development_guide/01-setup-minikube-no-driver/: 01-a-minikube-no-driver-setup.md  01-a-minikube-setup-quick.md  01-b-local-repo.md  01-c-fastapi-demo.md  01-d-argo.md  01-e-argo-counter.md  01-f-metaflow.md  01-g-gpu.md  01-h-colima-setup.md  01-h-minio-persistent.md  01-i-nvidia-setup.md  (+9 more)
docs/quick_guide/: 01-launch-setup.md  01b-launch-setup-no-driver.md  02-launch-fastapi-demo.md  03-kubectl-basics.md
(+7 files in other folders)
